--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,17 +11,16 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Postgres localhost
-spring.datasource.url=jdbc:postgresql://localhost:5432/ventas
-spring.datasource.username=postgres
-spring.datasource.password=user
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-#Postgres Internal Connection
-#postgres://user:DcLOwO1GdXz6ju8UaQcmnCcEPLLbpT8G@dpg-cmqav4eg1b2c73d4ngo0-a/ventas_2y7y
-#spring.datasource.url=jdbc:postgresql://dpg-cmqav4eg1b2c73d4ngo0-a/ventas_2y7y
-#spring.datasource.username=user
-#spring.datasource.password=DcLOwO1GdXz6ju8UaQcmnCcEPLLbpT8G
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ventas
+#spring.datasource.username=postgres
+#spring.datasource.password=user
 #spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Postgres Internal Connection postgres://user:OnyQnPOPsIRH7CU2HjY1pouqwlss8WKK
+spring.datasource.url=jdbc:postgresql://dpg-cnjft8uv3ddc738c7a50-a/ventas_6cxc
+spring.datasource.username=user
+spring.datasource.password=OnyQnPOPsIRH7CU2HjY1pouqwlss8WKK
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 #timeout max. 60 sec
