--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #MySQL localhost
-#spring.datasource.url=jdbc:mysql://localhost:3307/ventas
-#spring.datasource.username=root
-#spring.datasource.password=user
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ventas
+spring.datasource.username=root
+spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Railway
 #spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
@@ -17,10 +17,10 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Postgres Internal Connection postgres://user:OnyQnPOPsIRH7CU2HjY1pouqwlss8WKK
-spring.datasource.url=jdbc:postgresql://dpg-cnjft8uv3ddc738c7a50-a/ventas_6cxc
-spring.datasource.username=user
-spring.datasource.password=OnyQnPOPsIRH7CU2HjY1pouqwlss8WKK
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://dpg-cnjft8uv3ddc738c7a50-a/ventas_6cxc
+#spring.datasource.username=user
+#spring.datasource.password=OnyQnPOPsIRH7CU2HjY1pouqwlss8WKK
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 #timeout max. 60 sec
@@ -31,4 +31,4 @@ spring.datasource.hikari.maximum-pool-size=5
 
 logging.level.root=INFO
 
-server.port=8181
+server.port=8080
